added functions for covariance shrinkage and project data on the shrunk model space

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,11 @@
 export(CorShrinkML)
 export(CorShrinkVEM)
 export(CorShrinkVEM2)
+export(CovShrink)
+export(ProjectDataCorShrink)
 export(generate_cov)
 import(Matrix)
 import(ashr)
+import(expm)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
