--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,6 @@ export(ProjectDataCorShrink)
 export(generate_cov)
 import(Matrix)
 import(ashr)
-import(expm)
+importFrom(expm,sqrtm)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
