Adding .Rd files and modified gitignore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CorShrinkVEM)
 export(CorShrinkVEM2)
 export(CovShrink)
 export(ProjectDataCorShrink)
+export(bootcorSE_calc)
 export(generate_cov)
 import(Matrix)
 import(ashr)
