--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CorShrinkML)
 export(CorShrinkMLvec)
 export(CorShrinkVEM)
 export(CorShrinkVEM2)
+export(CorShrink_word2vec)
 export(CovShrink)
 export(ProjectDataCorShrink)
 export(bootcorSE_calc)
