filtered down on functions for corshrink

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,15 @@ Title: Adaptive Shrinkage of Correlation and Covariance Matrix using CorShrink
 Version: 0.99.0
 Date: 2016-03-12
 Author: person("Kushal", "Dey", email = "kkdey@uchicago.edu", role =
-    c("aut","cre"))
+    c("aut","cre"),
+      "Matthew", "Stephens", email = "mstephens@uchicago.edu", role = "aut")
 Maintainer: Kushal Dey <kkdey@uchicago.edu>
-Description: Performs adaptive shrinkage on correlation and covariance matrices
-    byfitting mixture model priors on Fisher Z-scores, that includes the ash prior
-    (Stephens 2016) and generalizations of it.
+Description: Performs adaptive shrinkage of correlation and covariance matrices
+    using a mixture model prior over the Fisher z-transformation of the correlations,
+    with the method flexible in choosing a separate shrinkage intensity for
+    each cell of the correlation or the covariance table. 
 Depends:
-    R (>= 3.2)
+    R (>= 3.2),
 Imports:
     ashr,
     SQUAREM,
