--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 packrat/lib*/
 .Rproj.user
 packrat/src/*
+packrat/lib-R/*
+packrat/lib-R/
+packrat/lib-R/KernSmooth
+packrat/lib-R
+packrat/lib-R/utils
