--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CorShrinkMatrix)
 export(CorShrinkVector)
 export(bootcorSE_calc)
 import(Matrix)
+import(SQUAREM)
 import(ashr)
 importFrom(grDevices,rgb)
 importFrom(graphics,axis)
