--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: CorShrink
 Type: Package
 Encoding: UTF-8
-Title: Adaptive Shrinkage of Correlation and Covariance Matrix
-Version: 0.1.1
-Date: 2016-03-12
+Title: Adaptive Shrinkage of Correlation and Covariance Matrices
+Version: 0.1-2
+Date: 2018-02-20
 Authors@R: c(person("Kushal","Dey",role=c("aut","cre"),
                     email="kkdey@uchicago.edu"),
-             person("Matthew","Stephens",role="aut"))
+             person("Matthew","Stephens",role="aut"),
+	     person("Peter","Carbonetto",role="ctb"))
 Maintainer: Kushal Dey <kkdey@uchicago.edu>
 Description: Performs adaptive shrinkage of correlation and covariance
     matrices using a mixture model prior over the Fisher
@@ -37,4 +38,4 @@ License: GPL (>= 2)
 NeedsCompilation: no
 LazyData: true
 VignetteBuilder: knitr
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
