--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(bootcorSE_calc)
 import(Matrix)
 import(SQUAREM)
 import(ashr)
+importFrom(ashr,ash)
 importFrom(grDevices,rgb)
 importFrom(graphics,axis)
 importFrom(reshape2,dcast)
