updated imports and the TODO

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,11 @@ export(CorShrinkData)
 export(CorShrinkMatrix)
 export(CorShrinkVector)
 export(bootcorSE_calc)
-import(Matrix)
-import(SQUAREM)
-import(ashr)
+importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(grDevices,rgb)
 importFrom(graphics,axis)
+importFrom(graphics,image)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,cor)
