--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,8 @@ export(CorShrinkVector)
 export(bootcorSE_calc)
 importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
-importFrom(grDevices,rgb)
-importFrom(graphics,axis)
-importFrom(graphics,image)
+importFrom(ggcorrplot,ggcorrplot)
+importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,cor)
