ggplot2 added as a dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     methods,
     Matrix,
     gridExtra,
-    ggcorrplot
+    ggcorrplot,
+    ggplot2
 Suggests:
     knitr,
     BiocStyle,
