--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(bootcorSE_calc)
 importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(ggcorrplot,ggcorrplot)
+importFrom(ggplot2,theme_minimal)
 importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
