added flexibility to perform shrinkage on partial correlation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(CorShrinkData)
 export(CorShrinkMatrix)
 export(CorShrinkVector)
 export(bootcorSE_calc)
+export(bootpcorSE_calc)
 importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
+importFrom(corpcor,cor2pcor)
 importFrom(ggcorrplot,ggcorrplot)
 importFrom(ggplot2,theme_minimal)
 importFrom(gridExtra,grid.arrange)
