--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,7 @@ export(bootpcorSE_calc)
 importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(corpcor,cor2pcor)
-importFrom(ggcorrplot,ggcorrplot)
-importFrom(ggplot2,theme_minimal)
+importFrom(corrplot,corrplot)
 importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
