--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(corpcor,cor2pcor)
 importFrom(corrplot,corrplot)
+importFrom(grDevices,colorRampPalette)
+importFrom(graphics,par)
 importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
