--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(CorShrinkMatrix)
 export(CorShrinkVector)
 export(bootcorSE_calc)
 export(bootpcorSE_calc)
+export(pCorShrinkData)
+import(SQUAREM)
+import(methods)
 importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(corpcor,cor2pcor)
