--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CorShrinkVector)
 export(bootcorSE_calc)
 export(bootpcorSE_calc)
 export(pCorShrinkData)
+export(pCorShrinkData2)
 import(SQUAREM)
 import(methods)
 importFrom(Matrix,nearPD)
@@ -18,5 +19,6 @@ importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,cor)
+importFrom(stats,lm)
 importFrom(stats,sd)
 importFrom(utils,modifyList)
