added an argument maxiter to the CorShrink functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,11 +13,13 @@ importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(corpcor,cor2pcor)
 importFrom(corrplot,corrplot)
+importFrom(glmnet,cv.glmnet)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,par)
 importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
+importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,lm)
 importFrom(stats,sd)
