added MASS to namespace imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(pCorShrinkData)
 export(pCorShrinkData2)
 import(SQUAREM)
 import(methods)
+importFrom(MASS,mvrnorm)
 importFrom(Matrix,nearPD)
 importFrom(ashr,ash)
 importFrom(corpcor,cor2pcor)
