--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,17 +4,16 @@ Encoding: UTF-8
 Title: Adaptive Shrinkage of Correlation and Covariance Matrices
 Version: 0.1-6
 Date: 2018-02-20
-Authors@R: c(person("Kushal","Dey",role=c("aut","cre"),
-                    email="kkdey@uchicago.edu"),
-             person("Matthew","Stephens",role="aut"),
-	     person("Peter","Carbonetto",role="ctb"))
+Author: c(person("Kushal","Dey",role=c("aut","cre"), email="kkdey@uchicago.edu"),
+          person("Matthew","Stephens",role="aut"),
+	        person("Peter","Carbonetto",role="ctb"))
 Maintainer: Kushal Dey <kkdey@uchicago.edu>
 Description: Performs adaptive shrinkage of correlation and covariance
-    matrices using a mixture model prior over the Fisher
-    z-transformation of the correlations. It allows separate shrinkage
-    intensity for each cell of the correlation matrix. Can also we flexibly 
-    extended to correlation like quantities such as cosine similarities in
-    word2vec models and to partial correlations in conditional graph estimation.
+    matrices using a mixture model prior over the Fisher z-transformation of the
+    correlations. It allows separate shrinkage intensity for each cell of the 
+    correlation matrix. Can also we flexibly  extended to correlation like 
+    quantities such as cosine similarities in word2vec models and to partial 
+    correlations in conditional graph estimation.
 Depends:
     R (>= 3.2),
 Imports:
