Added function for partial correlation shrinkage for data with missing entries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CorShrinkMatrix)
 export(CorShrinkVector)
 export(bootcorSE_calc)
 export(bootpcorSE_calc)
+export(iCorShrinkData)
 export(pCorShrinkData)
 export(pCorShrinkData2)
 import(CVXR)
@@ -24,6 +25,7 @@ importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,coef)
 importFrom(stats,cor)
+importFrom(stats,cov)
 importFrom(stats,cov2cor)
 importFrom(stats,lm)
 importFrom(stats,sd)
