Added iCorShrink2Data function performing adaptively regularized GLASSO for data matrix with missing entries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CorShrinkMatrix)
 export(CorShrinkVector)
 export(bootcorSE_calc)
 export(bootpcorSE_calc)
+export(iCorShrink2Data)
 export(iCorShrinkData)
 export(pCorShrinkData)
 export(pCorShrinkData2)
